<resources>
    <string name="app_name">ShoeStore</string>

    <string name="logout">Logout</string>
    <string name="loading">Loading…</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="or">OR</string>
    <string name="create_account">Create account</string>
    <string name="password_rules_label">Password must contain at least 8 characters</string>
    <string name="invalid_field_error">Invalid values, please verify</string>
    <string name="welcome_title">Welcome to our beautiful Shoe Store Inventory</string>
    <string name="welcome_description">Here you will be able to store your favorite shoes so you can compare then and decide which one to buy or use today </string>
    <string name="continue_button">Continue</string>
    <string name="keep_me_logged_in">Keep me logged in</string>
    <string name="instructions">Instructions</string>
    <string name="instructions_description">The next screen is where you will see your shoe list and add new shoes</string>
    <string name="instructions_add_button">In order to add a new shoe to your list you just need to click on the button like the one bellow. It will be on the bottom right corner.</string>
    <string name="shoe_name">Name: %s</string>
    <string name="shoe_company">Company: %s</string>
    <string name="shoe_size">Size: %s</string>
    <string name="shoe_description">"Description: %s"</string>
    <string name="shoe_detail_title">Add your new shoe information</string>
    <string name="name">Name</string>
    <string name="company">Company</string>
    <string name="size">Size</string>
    <string name="description">Description</string>
    <string name="add">Add</string>
    <string name="need_to_edit_field_warning">You need to edit at least one field to add a new shoe.</string>
    <string name="cancel">Cancel</string>
</resources>
