<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailField"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/double_margin"
                android:layout_marginTop="@dimen/giant_margin"
                android:hint="@string/email"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordField"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/double_margin"
                android:layout_marginTop="@dimen/normal_margin"
                android:hint="@string/password"
                app:endIconMode="password_toggle"
                app:layout_constraintTop_toBottomOf="@id/emailField">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:fontFamily="@font/roboto"
                android:text="@string/password_rules_label"
                android:textAlignment="center"
                app:layout_constraintTop_toBottomOf="@id/passwordField" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/double_margin"
                android:layout_marginTop="@dimen/big_margin"
                android:text="@string/login"
                android:textColor="@android:color/black"
                app:layout_constraintTop_toBottomOf="@id/passwordField" />

            <TextView
                android:id="@+id/loginOrCreateLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/normal_margin"
                android:text="@string/or"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                app:layout_constraintTop_toBottomOf="@id/loginButton" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/newAccountButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/double_margin"
                android:layout_marginTop="@dimen/normal_margin"
                android:text="@string/create_account"
                android:textColor="@android:color/black"
                app:layout_constraintTop_toBottomOf="@id/loginOrCreateLabel" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>
