<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="shoe"
            type="com.udacity.shoestore.shoe_list.model.Shoe" />

        <import type="android.view.View" />

        <import type="android.text.TextUtils" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/small_margin">

        <TextView
            android:id="@+id/shoeName"
            style="@style/ShoeLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_margin"
            android:text="@{@string/shoe_name(shoe.name)}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/shoe_name"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/shoeCompany"
            style="@style/ShoeLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_margin"
            android:text="@{@string/shoe_company(shoe.company)}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/shoeName"
            tools:text="@string/shoe_company"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/shoeSize"
            style="@style/ShoeLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_margin"
            android:text="@{@string/shoe_size(shoe.size)}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/shoeCompany"
            tools:text="@string/shoe_size"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/shoeDescription"
            style="@style/ShoeLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_margin"
            android:text="@{@string/shoe_description(shoe.description)}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/shoeSize"
            tools:text="@string/shoe_description"
            tools:visibility="visible" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginHorizontal="@dimen/normal_margin"
            android:layout_marginVertical="@dimen/half_margin"
            android:alpha="0.3"
            android:background="@color/colorAccent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/shoeDescription" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
