<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <!--
    To keep the instructions and the button
    Separated, It's used a ConstraintLayout
     -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/instructionsTitle"
            style="@style/TitleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/double_margin"
            android:text="@string/instructions"
            android:textAlignment="center"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/instructionsDescription"
            style="@style/DescriptionText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/double_margin"
            android:text="@string/instructions_description"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@id/instructionsTitle" />

        <TextView
            android:id="@+id/instructionsAddButtonLabel"
            style="@style/DescriptionText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/double_margin"
            android:text="@string/instructions_add_button"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@id/instructionsDescription" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/instructionsArrowAnimation"
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/instructionsAddButtonLabel"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/arrow_down" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/addShoeButtonSample"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary"
            android:clickable="false"
            android:focusable="false"
            android:importantForAccessibility="no"
            android:src="@android:drawable/ic_input_add"
            android:transitionName="shared_add_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/instructionsArrowAnimation" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/instructionsButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/double_margin"
            android:text="@string/continue_button"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
