<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.udacity.shoestore.shoe_list.ShoeListViewModel" />
    </data>

    <!--
         At this screen it's being used a ScrollView
         to enable the user to scroll the view when
         the keyboard is open
         and a ConstraintLayout inside to separate
         the input view and the buttons
      -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/normal_margin">

            <TextView
                android:id="@+id/shoeDetailTitle"
                style="@style/TitleText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/shoe_detail_title"
                android:textAlignment="center"
                app:layout_constraintBottom_toTopOf="@+id/nameField"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nameField"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/half_margin"
                android:hint="@string/name"
                app:layout_constraintTop_toBottomOf="@id/shoeDetailTitle">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:imeOptions="actionNext"
                    android:inputType="textCapWords"
                    android:text="@={viewModel.shoe.name}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/companyField"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/half_margin"
                android:hint="@string/company"
                app:layout_constraintTop_toBottomOf="@id/nameField">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:imeOptions="actionNext"
                    android:inputType="textCapWords"
                    android:text="@={viewModel.shoe.company}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/sizeField"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/half_margin"
                android:hint="@string/size"
                app:layout_constraintTop_toBottomOf="@id/companyField">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:imeOptions="actionNext"
                    android:inputType="textCapWords"
                    android:text="@={viewModel.shoe.size}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/descriptionField"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/half_margin"
                android:hint="@string/description"
                app:layout_constraintTop_toBottomOf="@+id/sizeField"
                app:layout_constraintVertical_bias="0">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/descriptionEditorField"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:fontFamily="@font/roboto"
                    android:gravity="top"
                    android:imeOptions="actionDone"
                    android:inputType="textMultiLine"
                    android:text="@={viewModel.shoe.description}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/addNewShoeButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/small_margin"
                android:layout_marginTop="@dimen/double_margin"
                android:layout_marginBottom="@dimen/double_margin"
                android:onClick="@{() -> viewModel.validateNewShoe()}"
                android:text="@string/add"
                android:textColor="@android:color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/cancelNewShoeButton"
                app:layout_constraintTop_toBottomOf="@id/descriptionField"
                app:layout_constraintVertical_bias="1" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/cancelNewShoeButton"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/double_margin"
                android:layout_marginEnd="@dimen/small_margin"
                android:layout_marginBottom="@dimen/double_margin"
                android:text="@string/cancel"
                android:textColor="@android:color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/addNewShoeButton"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/descriptionField"
                app:layout_constraintVertical_bias="1"
                app:strokeColor="@android:color/holo_red_dark" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>
